[package]
name = "omena-incremental"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Salsa-style incremental invalidation primitives for Omena"
repository = "https://github.com/omenien/omena-incremental"
readme = "README.md"
keywords = ["omena", "incremental", "salsa", "analysis"]
categories = ["development-tools"]
exclude = [".github/**"]

[lib]
name = "omena_incremental"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
salsa = { version = "0.26.1", default-features = false, features = ["macros", "inventory"] }
